# nenos-app-react

./: README.md  cached_summary.txt  docker-compose.yml  pyproject.toml  test1.py
backend/: .env  Dockerfile  app.py  main.py  main_chatbot.py  pyproject.toml  test.html  write_test.py
backend/test/: DocumentSummary.js  FileUpload.js  QuestionInput.js  Responses.js  app.py
frontend/: Dockerfile  config.js  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: DocumentSummary.js  FileUpload.js  QuestionInput.js  Responses.js
